tests/NormalTests/paczka1/fuzzy1/99533753.err
Error in line 9: GVVZs A865 63,7
Error in line 11: GVVZs S690 14,5
Error in line 10: B1k A865 48,6
Error in line 20: Ii3QPcay A865 23,1
Error in line 13: B1k A113 12,5
Error in line 27: S690 A865 4,4
Error in line 18: d8YFpPbI S690 93,4
Error in line 39: S690 A882 22,8
